--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="icon" href="img/13.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,10 +46,10 @@
                     <h2>ABOUT</h2>
                 </div>
                 <div class="about_content">
-                    <div class="img">
+                    <div class="img ani-left">
                         <img src="img/6.jpg" alt="">
                     </div>
-                    <div class="text-area">
+                    <div class="text-area ani-right">
                         <div class="text-area-header"><h3>Our Story</h3></div>
                         <div class="text-area-icon"><i class="fa-solid fa-asterisk"></i></div>
                         <div class="text-area-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laborum repellat necessitatibus, error quidem vel. Quam impedit nisi, ratione maiores corporis quasi pariatur, in culpa, omnis quidem quas id ea.</p></div>
@@ -64,28 +65,28 @@
     <section id="portfolio">
         <div class="portfolio-container">
             <div class="portfolio">
-                <div class="portfolio-item coffee">
+                <div class="portfolio-item coffee ani-top">
                     <img src="img/1.jpg" alt="">
                 </div>
-                <div class="portfolio-item cookie">
+                <div class="portfolio-item cookie ani-top">
                     <img src="img/2.jpg" alt="">
                 </div>
-                <div class="portfolio-item cookie">
+                <div class="portfolio-item cookie ani-top">
                     <img src="img/3.jpg" alt="">
                 </div>
-                <div class="portfolio-item coffee">
+                <div class="portfolio-item coffee ani-top">
                     <img src="img/4.jpg" alt="">
                 </div>
-                <div class="portfolio-item coffee">
+                <div class="portfolio-item coffee ani-bottom">
                     <img src="img/5.jpg" alt="">
                 </div>
-                <div class="portfolio-item cookie">
+                <div class="portfolio-item cookie ani-bottom">
                     <img src="img/7.jpg" alt="">
                 </div>
-                <div class="portfolio-item coffee">
+                <div class="portfolio-item coffee ani-bottom">
                     <img src="img/8.jpg" alt="">
                 </div>
-                <div class="portfolio-item coffee">
+                <div class="portfolio-item coffee ani-bottom">
                     <img src="img/9.jpg" alt="">
                 </div>
             </div>
@@ -102,10 +103,10 @@
                 <h2>DISCOVER</h2>
             </div>
             <div class="about_content">
-                <div class="img">
+                <div class="img ani-left">
                     <img src="img/menu.jpg" alt="">
                 </div>
-                <div class="text-area">
+                <div class="text-area ani-right">
                     <div class="text-area-header"><h3>MENU</h3></div>
                     <div class="text-area-icon"><i class="fa-solid fa-asterisk"></i></div>
                     <div class="text-area-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laborum repellat necessitatibus, error quidem vel. Quam impedit nisi, ratione maiores corporis quasi pariatur, in culpa, omnis quidem quas id ea.</p></div>
@@ -125,16 +126,16 @@
                     <h2>CONTACT US</h2>
                 </div>
                 <div class="section-about-text">
-                    <div class="phone a">
+                    <div class="phone a ani-left">
                         <i class="fa-solid fa-phone-flip"></i>
                         <p>555-55-5**</p><br>
                         <p>888-88-8**</p>
                     </div>
-                    <div class="location a">
+                    <div class="location a ani-top">
                         <i class="fa-solid fa-location-dot"></i>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
-                    <div class="mail a">
+                    <div class="mail a ani-right">
                         <i class="fa-solid fa-envelope"></i>
                         <p>coffee@gmail.com</p><br>
                         <p>cookie@outlook.com</p>
@@ -150,7 +151,7 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div class="footer-header f"><h2>ABOUT US</h2></div>
-                <div class="footer-body f">
+                <div class="footer-body f ani-top">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio sequi adipisci minima cumque culpa fugiat, facere maiores odio eligendi ex.</p>
                 </div>
                 <div class="footer-footer f">
